# ac_simulator

./: .gitignore  CURSOR.md  README.md  TODO.md  build_zephyr_apps.sh  gui.py  run_ac_simulator.sh  silkit_config.yaml  start_simulator.sh  test.sh  test_can_frame.py  west.yml
bridge/: bridge.py  participantconfig.yaml
can_config/: silkit_config.yaml
can_test/: Makefile  can_monitor.py  can_receive_test.c  can_send_test.c  test_can_send.py
gui/: ac_panel.py
hvac_panel/: ac_panel.py
lighting_panel/: lighting_panel.py  requirements.txt
scripts/: test_telematics.py
zephyr-apps/: ac-sim-tap.sh
zephyr-apps/common/net/: CMakeLists.txt  Kconfig  ac_net.c  ac_net.h  can_ids.h
zephyr-apps/hvac/: CMakeLists.txt  Kconfig  Kconfig.defaults  prj.conf
zephyr-apps/hvac/boards/: native_sim.overlay
zephyr-apps/hvac/src/: common.h  hvac.h  main.c
zephyr-apps/lighting/: CMakeLists.txt  Kconfig  Kconfig.defaults  prj.conf  zeth2.conf
zephyr-apps/lighting/boards/: native_sim.overlay
zephyr-apps/lighting/src/: lighting.h  main.c
zephyr-apps/telematics/: CMakeLists.txt  Kconfig  prj.conf  zeth0.conf
zephyr-apps/telematics/src/: main.c  telematics.h  telematics_config.h
